--- a/instagramapp/templates/navbar.html
+++ b/instagramapp/templates/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar " style="background-color:#13e4af;">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a style="font-family: 'Kodchasan', sans-serif;"class="navbar-brand" id="victor" href="{% url 'homePage' %}">The Image Gallery
+        <a class="navbar-brand" id="victor" href="{% url 'homePage' %}">Instagram
            </a>
       </div>
 
