--- a/instagramapp/templates/base.html
+++ b/instagramapp/templates/base.html
@@ -13,6 +13,7 @@
   {% block styles %}
     {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/baseimages.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Grand+Hotel" rel="stylesheet">
   {% endblock %}
 
 </head>
