--- a/instagramapp/templates/index.html
+++ b/instagramapp/templates/index.html
@@ -5,15 +5,14 @@
 
 <div class="container">
 
-<div class="jumbotron text-center" style="background-color:black;">
+<div class="jumbotron text-center" style="background-color:white;">
 
-<h1 class="h1" style="font-family: 'Grand Hotel', cursive; color:white;font-size:70px;">Instagram</h1>
-
-<p style="font-family: 'Kodchasan', sans-serif;color:white;">The delicate balance of mentoring someone is not creating them in your own image, but giving them the opportunity to create themselves.</p>
+<h1 class="h1" style="font-family: 'Grand Hotel', cursive; color:blue;font-size:70px;">Instagram</h1>
 
 </div>
 </div>
 
+<!--<input type="hidden" role="uploadcare-uploader" name="my_file" />-->
 
 <div class="container">
 
@@ -28,7 +27,6 @@
      {% endfor %}
 </div>
 </div>
-
 
 
    {% endblock %}
