Edit registration page

--- a/instagramapp/templates/image.html
+++ b/instagramapp/templates/image.html
@@ -5,11 +5,10 @@
 
 <div class="container">
 
-<div class="jumbotron text-center" style="background-color:black;">
+<div class="jumbotron text-center" style="background-color:white;">
 
-<h1 class="h1" style="font-family: 'Grand Hotel', cursive; color:white;font-size:70px;">Instagram</h1>
+<h1 class="h1" style="font-family: 'Grand Hotel', cursive; color:blue;font-size:70px;">Instagram</h1>
 
-<p style="font-family: 'Kodchasan', sans-serif;color:white;">The delicate balance of mentoring someone is not creating them in your own image, but giving them the opportunity to create themselves.</p>
 
 </div>
 </div>
