--- a/instagramapp/templates/navbar.html
+++ b/instagramapp/templates/navbar.html
@@ -8,63 +8,64 @@
       </div>
 <div class="col-sm-6 col-md-6">
             {% if user.is_authenticated %}
-            <ul>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
-                          <span class="caret"></span>
-                      </a>
-                <ul class="dropdown-menu" role="menu">
-                  <li>
-                    <a href="{%url 'homePage'%}">Home</a>
+
+
+                    <li>
+                    <a href="{%url 'homePage'%}">Profile</a>
                   </li>
                   <li>
                     <a href="/accounts/password/change">Change Password</a>
                   </li>
+
                   <li>
                     <a href="/logout">Logout</a>
                   </li>
-                </ul>
-              </li>
-            </ul>
+
             {% else %}
             <li>
               <a class='btn btn-default' href="/accounts/login">Login</a>
             </li>
 
+    <li>
+              <a class='btn btn-default' href="/accounts/register">Register</a>
+            </li>
+
+
+
             {% endif %}
           </div>
-      <!--Dropdown for filtering by location or category-->
+      <!--&lt;!&ndash;Dropdown for filtering by location or category&ndash;&gt;-->
 
-      <ul class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
-                 data-toggle="dropdown" aria-haspopup="true"
-                 style="font-family: 'Kodchasan', sans-serif;"aria-expanded="false">
-                CATEGORY
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                {% for tag in tags %}
-                <a class="dropdown-item" style="font-family: 'Kodchasan', sans-serif;" href="/?tags={{tag.id}}">{{tag.name}}</a>
-                <div class="dropdown-divider"></div>
-                {% endfor %}
-              </div>
-            </ul>
+      <!--<ul class="nav-item dropdown">-->
+              <!--<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"-->
+                 <!--data-toggle="dropdown" aria-haspopup="true"-->
+                 <!--style="font-family: 'Kodchasan', sans-serif;"aria-expanded="false">-->
+                <!--CATEGORY-->
+              <!--</a>-->
+              <!--<div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+                <!--{% for tag in tags %}-->
+                <!--<a class="dropdown-item" style="font-family: 'Kodchasan', sans-serif;" href="/?tags={{tag.id}}">{{tag.name}}</a>-->
+                <!--<div class="dropdown-divider"></div>-->
+                <!--{% endfor %}-->
+              <!--</div>-->
+            <!--</ul>-->
 
-            <ul class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#"
-                 id="navbarDropdown" role="button" data-toggle="dropdown"
-                 style="font-family: 'Kodchasan', sans-serif;" aria-haspopup="true" aria-expanded="false">
-               LOCATION
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                {% for location in locations %}
-                <a class="dropdown-item" style="font-family: 'Kodchasan', sans-serif;" href="/?location={{location.id}}">{{location.name}}</a>
-                <div class="dropdown-divider"></div>
-                {% endfor %}
-              </div>
-            </ul>
+            <!--<ul class="nav-item dropdown">-->
+              <!--<a class="nav-link dropdown-toggle" href="#"-->
+                 <!--id="navbarDropdown" role="button" data-toggle="dropdown"-->
+                 <!--style="font-family: 'Kodchasan', sans-serif;" aria-haspopup="true" aria-expanded="false">-->
+               <!--LOCATION-->
+              <!--</a>-->
+              <!--<div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+                <!--{% for location in locations %}-->
+                <!--<a class="dropdown-item" style="font-family: 'Kodchasan', sans-serif;" href="/?location={{location.id}}">{{location.name}}</a>-->
+                <!--<div class="dropdown-divider"></div>-->
+                <!--{% endfor %}-->
+              <!--</div>-->
+            <!--</ul>-->
 
 
-      <!--end of dropdown for filtering by location or category-->
+      <!--&lt;!&ndash;end of dropdown for filtering by location or category&ndash;&gt;-->
 
       <!-- Adding a search form  -->
       <div class="col-sm-4 col-md-4 navbar-right">
@@ -72,9 +73,9 @@
         <form class="navbar-form" role="search" action="{% url 'search_image' %}">
 
           <div class="input-group">
-            <input type="text" style="font-family: 'Kodchasan', sans-serif; class="form-control" placeholder="Search Image" name="image">
+            <input type="text" class="form-control" placeholder="Type Username" name="image">
             <div class="input-group-btn">
-              <button class="btn btn-info" style="font-family: 'Kodchasan', sans-serif; type="submit">Submit</button>
+              <button class="btn btn-info" type="submit">Find Users</button>
             </div>
           </div>
 
