--- a/instagramapp/templates/registration/base.html
+++ b/instagramapp/templates/registration/base.html
@@ -13,6 +13,7 @@
   {% block styles %}
     {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/baseimages.css' %}">
+     <link href="https://fonts.googleapis.com/css?family=Grand+Hotel" rel="stylesheet">
   {% endblock %}
     <script>
   UPLOADCARE_PUBLIC_KEY = '3a093d5b5e93b5c4cde5';
