--- a/instagramapp/templates/registration/login.html
+++ b/instagramapp/templates/registration/login.html
@@ -12,7 +12,9 @@
       <div class="panel panel-default">
 
         <div class="panel-heading">
-          <h3 class="text-center">Sign In</h3>
+          <h3 class="text-center" style=" font-family: 'Grand Hotel', cursive;color:blue;font-size:30px;">
+            <br>
+            Sign In</h3>
         </div>
         <div class="panel-body">
 
