--- a/static/css/baseimages.css
+++ b/static/css/baseimages.css
@@ -11,5 +11,23 @@ background-color:white;
 
 #victor{
 font-family: 'Grand Hotel', cursive;
+font-size: 30px;
+
+}
+
+li {
+    display: inline;
+}
+
+
+li a {
+
+    padding: 20px;
+
+}
+
+#footer1 li{
+padding: 10px;
+font-size: 10px;
 
 }
