--- a/instagramapp/templates/registration/registration_form.html
+++ b/instagramapp/templates/registration/registration_form.html
@@ -1,19 +1,27 @@
 {%extends "registration/base.html"%} {% load bootstrap4 %}
+{%load static%}
+
 {% block content %}
-<div class="container">
+<div class="container" style="background-color:#fff;">
   <div class="row">
     <!-- Empty div -->
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col-md-6 mt-5">
+      <img src="{% static 'photos/insta.jpg' %}" style="height:400px;width:450px;" >
+
+
+    </div>
+
+
+    <div class="col-md-5 mt-5">
       {% if form.errors %}
         <p> Some Information Might be Incorrect </p>
       {% endif %}
-      <div class="panel panel-default">
+      <div class="card border-primary mb-4" style="max-width:25rem;">
 
-        <div class="panel-heading">
-          <h3 class="text-center">Sign Up</h3>
+        <div class="card-header text-center"><h1 class="h1" style="font-family: 'Grand Hotel', cursive; color:blue;font-size:65px;">Instagram</h1>
+          <h3 class="text-center" style="color:grey;font-size:15px;">Sign up to see photos and videos from your friends.</h3>
         </div>
-        <div class="panel-body">
+         <div class="card-body text-primary">
 
           <form  action="/accounts/register/" method="post">
             {% csrf_token %}
@@ -31,9 +39,36 @@
       </div>
 
     </div>
-    <!-- empty div -->
-    <div class="col-md-4"></div>
+
+    </div>
+  <br>
+  <br>
+  <!-- empty div -->
+
+
+  <div class="container">
+    <div class="col-md-12">
+      <div class="footer text-center">
+        <ul id="footer1">
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>PRESS</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li>DIRECTORY</li>
+      <li>PROFILES</li>
+      <li>HASHTAGS</li>
+      <li>LANGUAGE</li>
+          <br>
+
+          <li style="font-size:10px;"> <strong>© 2018 MELISSA MALALA</strong></li>
+          </ul>
+
+    </div>
+
   </div>
 </div>
-
+</div>
 {% endblock %}
