Registration form done

--- a/instagramapp/templates/registration/registration_form.html
+++ b/instagramapp/templates/registration/registration_form.html
@@ -11,7 +11,16 @@
       <div class="card mt-5" style="width: 28rem;">
   <div class="card-body text-center">
     <h5 class="card-title">Have an account already?</h5>
-    <a href="/accounts/login" class="btn btn-primary">Login</a>
+    <h2 style="color:grey;font-size:10px;">By signing up, you agree to our Terms, Data Policy and Cookies Policy.</h2>
+  <a href="/accounts/login" class="btn btn-primary">Login</a>
+  </div>
+</div>
+
+      <div class="card mt-5" style="width: 28rem;">
+  <div class="card-body text-center">
+    <h5 class="card-title">Get the app.</h5>
+    <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8"><img src="{% static 'photos/appstore.png' %}" style="height:70px;width:200px;"></a>
+    <a href="https://play.google.com/store?hl=en"><img src="{% static 'photos/playstore.png' %}" style="height:70px;width:200px;"></a>
   </div>
 </div>
 
