--- a/instagramapp/templates/image.html
+++ b/instagramapp/templates/image.html
@@ -1,85 +1,77 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 <link href="https://fonts.googleapis.com/css?family=Charmonman|Dancing+Script|Kodchasan|Spirax|Abril+Fatface" rel="stylesheet">
 
 <div class="container">
 
-<div class="jumbotron text-center" style="background-color:white;">
+  <div class="jumbotron text-center" style="background-color:white;">
 
-<h1 class="h1" style="font-family: 'Grand Hotel', cursive; color:blue;font-size:70px;">Instagram</h1>
+    <h1 class="h1" style="font-family: 'Grand Hotel', cursive; color:blue;font-size:70px;">Instagram</h1>
 
 
-</div>
+  </div>
 </div>
 
 
 <div class="container">
 
-<div class="card-columns">
+  <div class="card-columns">
 
 
-  <div class="card border-secondary"><a href="{% url 'image' image.id %}">
-   <img src="{{image.image.url}}"
-           data-target="#imageModal{{image.id}}" data-toggle="modal"
-        alt="" class="img-fluid" id="eachimage" size="100px200"></a>
+    <div class="card border-secondary"><a href="{% url 'image' image.id %}">
+        <img src="{{image.image.url}}" data-target="#imageModal{{image.id}}" data-toggle="modal" alt="" class="img-fluid" id="eachimage"
+          size="100px200"></a>
+    </div>
+
   </div>
-
-</div>
 </div>
 
-  <!--modal-->
+<!--modal-->
 
-      <div class="modal fade" id="imageModal{{image.id}}" tabindex="-1"
-           role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-              <img src="{{image.image.url}}"
-                   data-toggle="modal" alt="" style="height:600px;width:500px;">
-              <div class="modal-header">
-              <h4 id="modal-text text-center">{{image.name}}</h4>
-                  <h4 style="font-family: 'Kodchasan', sans-serif;color:blue;" id="modal-text ">{{image.location}}</h4>
-                  {% for tag in image.tags.all %}
+<div class="modal fade" id="imageModal{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <img src="{{image.image.url}}" data-toggle="modal" alt="" style="height:600px;width:500px;">
+      <div class="modal-header">
+        <h4 id="modal-text text-center">{{image.name}}</h4>
+        <h4 style="font-family: 'Kodchasan', sans-serif;color:blue;" id="modal-text ">{{image.location}}</h4>
+        {% for tag in image.tags.all %}
 
-                <button class="btn btn-lg btn-success"
-                        style="font-family: 'Kodchasan', sans-serif;color:white;"> #{{ tag.name }}</button>
+        <button class="btn btn-lg btn-success" style="font-family: 'Kodchasan', sans-serif;color:white;"> #{{ tag.name }}</button>
 
-                 {% endfor %}
-            </div>
+        {% endfor %}
+      </div>
 
-            <div class="modal-footer">
+      <div class="modal-footer">
 
-                <input class="form-control" type="text" value="https://gallerymelissa.herokuapp.com{{image.image.url}}">
-                <button  type="button" value="https://gallerymelissa.herokuapp.com{{image.image.url}}"  onclick="copyLink(this.value)" class="btn btn-outline-secondary my-2 my-sm-0 link-btn">Copy Photo Link</button>
+        <input class="form-control" type="text" value="https://gallerymelissa.herokuapp.com{{image.image.url}}">
+        <button type="button" value="https://gallerymelissa.herokuapp.com{{image.image.url}}" onclick="copyLink(this.value)" class="btn btn-outline-secondary my-2 my-sm-0 link-btn">Copy
+          Photo Link</button>
 
-            </div>
-            <div class="modal-footer">
+      </div>
+      <div class="modal-footer">
 
-              <h5 id=modal-text>{{image.description}}</h5>
+        <h5 id=modal-text>{{image.description}}</h5>
 
-              <button type="button" class="btn btn-outline-secondary
+        <button type="button" class="btn btn-outline-secondary
               my-2 my-sm-0" data-dismiss="modal">Close</button>
 
-            </div>
-          </div>
-        </div>
       </div>
+    </div>
+  </div>
+</div>
 
 <script>
 
-function copyLink(value) {
+  function copyLink(value) {
     console.log('sdfgsdfg')
-    function handler(event){
-        event.clipboardData.setData('text/plain', value);
-        event.preventDefault();
-        document.removeEventListener('copy', handler, true);
+    function handler(event) {
+      event.clipboardData.setData('text/plain', value);
+      event.preventDefault();
+      document.removeEventListener('copy', handler, true);
     }
 
     document.addEventListener('copy', handler, true);
     document.execCommand('copy');
 
-}
-</script>
-
-
-   {% endblock %}
+  }
+</script> {% endblock %}
