--- a/instagramapp/templates/search.html
+++ b/instagramapp/templates/search.html
@@ -1,91 +1,85 @@
-{%extends 'base.html'%}
-{% block content %}
+{%extends 'base.html'%} {% block content %}
 <div class="container">
 
   <div class="row">
     {% if pictures%}
-      <h2 style="font-family: 'Kodchasan', sans-serif;color:white;"> Here are images of your search term: {{message}}</h2>
+    <h2 style="font-family: 'Kodchasan', sans-serif;color:white;"> Here are images of your search term: {{message}}</h2>
     {% else %}
-      <h2 style="font-family: 'Kodchasan', sans-serif;color:white;"> It appears that there are 0 images for your search term {{message}}, please try again. </h2>
+    <h2 style="font-family: 'Kodchasan', sans-serif;color:white;"> It appears that there are 0 images for your search term
+      {{message}}, please try again. </h2>
     {% endif %}
 
   </div>
 
   <div class="row">
 
-  {% if pictures %}
-<div class="container">
+    {% if pictures %}
+    <div class="container">
 
-<div class="card-columns">
+      <div class="card-columns">
 
-    {% for image in pictures %}
-  <div class="card border-secondary">
-   <img src="{{image.image.url}}"
-           data-target="#imageModal{{image.id}}" data-toggle="modal"
-           alt="" class="img-fluid" id="eachimage" size="100px200">
-  </div>
-     {% endfor %}
-</div>
-</div>
+        {% for image in pictures %}
+        <div class="card border-secondary">
+          <img src="{{image.image.url}}" data-target="#imageModal{{image.id}}" data-toggle="modal" alt="" class="img-fluid" id="eachimage"
+            size="100px200">
+        </div>
+        {% endfor %}
+      </div>
+    </div>
 
-  {% endif %}
+    {% endif %}
   </div>
 </div>
 
 
 
 <!--modal-->
-    {% for image in pictures %}
-      <div class="modal fade" id="imageModal{{image.id}}" tabindex="-1"
-           role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-              <img src="{{image.image.url}}"
-                   data-toggle="modal" alt="" style="height:600px;width:500px;">
-              <div class="modal-header">
-              <h4 id="modal-text text-center">{{image.name}}</h4>
-                  <h4 style="font-family: 'Kodchasan', sans-serif;color:blue;" id="modal-text ">{{image.location}}</h4>
-                  {% for tag in image.tags.all %}
+{% for image in pictures %}
+<div class="modal fade" id="imageModal{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <img src="{{image.image.url}}" data-toggle="modal" alt="" style="height:600px;width:500px;">
+      <div class="modal-header">
+        <h4 id="modal-text text-center">{{image.name}}</h4>
+        <h4 style="font-family: 'Kodchasan', sans-serif;color:blue;" id="modal-text ">{{image.location}}</h4>
+        {% for tag in image.tags.all %}
 
-                <button class="btn btn-lg btn-success"
-                        style="font-family: 'Kodchasan', sans-serif;color:white;"> #{{ tag.name }}</button>
+        <button class="btn btn-lg btn-success" style="font-family: 'Kodchasan', sans-serif;color:white;"> #{{ tag.name }}</button>
 
-                 {% endfor %}
-            </div>
+        {% endfor %}
+      </div>
 
-            <div class="modal-footer">
+      <div class="modal-footer">
 
-                <input class="form-control" type="text" value="https://gallerymelissa.herokuapp.com{{image.image.url}}">
-                <button  type="button" value="https://gallerymelissa.herokuapp.com{{image.image.url}}"  onclick="copyLink(this.value)" class="btn btn-outline-secondary my-2 my-sm-0 link-btn">Copy Photo Link</button>
+        <input class="form-control" type="text" value="https://gallerymelissa.herokuapp.com{{image.image.url}}">
+        <button type="button" value="https://gallerymelissa.herokuapp.com{{image.image.url}}" onclick="copyLink(this.value)" class="btn btn-outline-secondary my-2 my-sm-0 link-btn">Copy
+          Photo Link</button>
 
-            </div>
-            <div class="modal-footer">
+      </div>
+      <div class="modal-footer">
 
-              <h5 id=modal-text>{{image.description}}</h5>
+        <h5 id=modal-text>{{image.description}}</h5>
 
-              <button type="button" class="btn btn-outline-secondary
+        <button type="button" class="btn btn-outline-secondary
               my-2 my-sm-0" data-dismiss="modal">Close</button>
 
-            </div>
-          </div>
-        </div>
       </div>
+    </div>
+  </div>
+</div>
 
 <script>
 
-function copyLink(value) {
+  function copyLink(value) {
     console.log('sdfgsdfg')
-    function handler(event){
-        event.clipboardData.setData('text/plain', value);
-        event.preventDefault();
-        document.removeEventListener('copy', handler, true);
+    function handler(event) {
+      event.clipboardData.setData('text/plain', value);
+      event.preventDefault();
+      document.removeEventListener('copy', handler, true);
     }
 
     document.addEventListener('copy', handler, true);
     document.execCommand('copy');
 
-}
-</script>
-    {% endfor %}
-
-{% endblock %}
+  }
+</script> {% endfor %} {% endblock %}
