--- a/instagramapp/templates/navbar.html
+++ b/instagramapp/templates/navbar.html
@@ -1,8 +1,11 @@
+{% load static %}
 <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Charmonman|Kodchasan|Dancing+Script|Spirax" rel="stylesheet">
 
 <nav class="navbar bg-light ">
   <div class="container-fluid">
     <div class="navbar-header">
+        <a class="navbar-brand" href="{% url 'homePage' %}"><img src="{% static 'photos/instaicon1.jpg' %}" style="height:30px;width:36px;">
+      </a>
       <a class="navbar-brand" id="victor" href="{% url 'homePage' %}">Instagram
       </a>
     </div>
