--- a/instagramapp/templates/image.html
+++ b/instagramapp/templates/image.html
@@ -50,6 +50,8 @@
       </div>
       <div class="modal-footer">
 
+     <p>Posted by {{image.user.user}}</p>
+
         <h5 id=modal-text>{{image.description}}</h5>
 
         <button type="button" class="btn btn-outline-secondary
