--- a/instagramapp/templates/navbar.html
+++ b/instagramapp/templates/navbar.html
@@ -16,6 +16,9 @@
       <li>
         <a href="{%url 'homePage'%}">Profile</a>
       </li>
+                   <li>
+                    <a href="{%url 'new_image'%}">Upload</a>
+                  </li>
       <li>
         <a href="/accounts/password/change">Change Password</a>
       </li>
