--- a/instagramapp/templates/registration/new_image.html
+++ b/instagramapp/templates/registration/new_image.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+<div class="container" style="background-color:#fff;">
+
+     <div class="row">
+
 
   <form  action="{%url 'new_image'%}" method="post" enctype="multipart/form-data">
     {%csrf_token%}
@@ -27,5 +31,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   {% bootstrap_javascript %} {% endblock %}
 
+
+     </div>
+</div>
 </body>
 {% endblock %}
