--- a/instagramapp/templates/navbar.html
+++ b/instagramapp/templates/navbar.html
@@ -78,7 +78,7 @@
       <form class="navbar-form" role="search" action="{% url 'search_image' %}">
 
         <div class="input-group">
-          <input type="text" class="form-control mr-sm-4" placeholder="Search User" name="image">
+          <input type="text" class="form-control mr-sm-4" placeholder="Search User" name="user">
           <div class="input-group-btn">
             <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Find</button>
           </div>
