--- a/instagramapp/templates/image.html
+++ b/instagramapp/templates/image.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %} {% load static %} {% load bootstrap4%} {% block content %}
 <link href="https://fonts.googleapis.com/css?family=Charmonman|Dancing+Script|Kodchasan|Spirax|Abril+Fatface" rel="stylesheet">
 
 <div class="container">
@@ -12,68 +12,130 @@
 </div>
 
 
+
+
 <div class="container">
-
-  <div class="card-columns">
-
-
-    <div class="card border-secondary"><a href="{% url 'image' image.id %}">
-        <img src="{{image.image.url}}" data-target="#imageModal{{image.id}}" data-toggle="modal" alt="" class="img-fluid" id="eachimage"
-          size="100px200"></a>
-    </div>
-
+<div class="card mb-3" style="width:40rem;;">
+  <img class="card-img-top" src="{{image.image.url}}" alt="Card image cap" class="img-fluid" size="100px200">
+  <div class="card-body">
+    <h5 class="card-title"><strong>Name Of Image:</strong>
+      <br>
+      {{image.name}}</h5>
+    <p class="card-text"><strong>Location:</strong>
+      <br>
+      {{image.location}}</p>
+    <p class="card-text"><strong>Caption:</strong>
+      <br>
+      {{image.description}}</p>
+    <p class="card-text"><small class="text-muted">Posted by {{image.user}}</small></p>
   </div>
+
+  <div class="card border-secondary">
+     <div class="card-header">
+     <h5>Image Comments</h5>
+       </div>
+     <div class="card-body text-primary">
+
+
+     <p>{{image.comments}}</p>
+       <!--who posted the review-->
+       <!--<p>Posted by : {{ image.user}}</p>-->
+     </div>
+   </div>
 </div>
+</div>
+
+
+<h3>Add your review</h3>
+
+{{form.media}}
+
+  <div class="card mx-auto" style="max-width:50rem; margin-top:50px;">
+  <form  action="{%url 'add_review' %}" method="post" enctype="multipart/form-data">
+    {%csrf_token%}
+
+    {% bootstrap_form form%}
+    <input type="submit" class="btn btn-success btn-lg" value="Post">
+  </form>
+  </div>
+   {% block scripts %}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  {% bootstrap_javascript %}
+  {% endblock %}
+</div>
+
+<!--<div class="container">-->
+
+  <!--<div class="card-columns">-->
+
+
+    <!--<div class="card border-secondary"><a href="{% url 'image' image.id %}">-->
+        <!--<img src="{{image.image.url}}" data-target="#imageModal{{image.id}}" data-toggle="modal" alt="" class="img-fluid" id="eachimage"-->
+          <!--size="100px200"></a>-->
+    <!--</div>-->
+
+
+
+  <!--</div>-->
+
+
+<!--</div>-->
+
+
 
 <!--modal-->
 
-<div class="modal fade" id="imageModal{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <img src="{{image.image.url}}" data-toggle="modal" alt="" style="height:600px;width:500px;">
-      <div class="modal-header">
-        <h4 id="modal-text text-center">{{image.name}}</h4>
-        <h4 style="font-family: 'Kodchasan', sans-serif;color:blue;" id="modal-text ">{{image.location}}</h4>
-        {% for tag in image.tags.all %}
+<!--<div class="modal fade" id="imageModal{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">-->
+  <!--<div class="modal-dialog" role="document">-->
+    <!--<div class="modal-content">-->
+      <!--<img src="{{image.image.url}}" data-toggle="modal" alt="" style="height:600px;width:500px;">-->
+      <!--<div class="modal-header">-->
+        <!--<h4 id="modal-text text-center">{{image.name}}</h4>-->
+        <!--<h4 style="font-family: 'Kodchasan', sans-serif;color:blue;" id="modal-text ">{{image.location}}</h4>-->
+        <!--{% for tag in image.tags.all %}-->
 
-        <button class="btn btn-lg btn-success" style="font-family: 'Kodchasan', sans-serif;color:white;"> #{{ tag.name }}</button>
+        <!--<button class="btn btn-lg btn-success" style="font-family: 'Kodchasan', sans-serif;color:white;"> #{{ tag.name }}</button>-->
 
-        {% endfor %}
-      </div>
+        <!--{% endfor %}-->
+      <!--</div>-->
 
-      <div class="modal-footer">
+      <!--<div class="modal-footer">-->
 
-        <input class="form-control" type="text" value="https://gallerymelissa.herokuapp.com{{image.image.url}}">
-        <button type="button" value="https://gallerymelissa.herokuapp.com{{image.image.url}}" onclick="copyLink(this.value)" class="btn btn-outline-secondary my-2 my-sm-0 link-btn">Copy
-          Photo Link</button>
+        <!--<input class="form-control" type="text" value="https://gallerymelissa.herokuapp.com{{image.image.url}}">-->
+        <!--<button type="button" value="https://gallerymelissa.herokuapp.com{{image.image.url}}" onclick="copyLink(this.value)" class="btn btn-outline-secondary my-2 my-sm-0 link-btn">Copy-->
+          <!--Photo Link</button>-->
 
-      </div>
-      <div class="modal-footer">
+      <!--</div>-->
+      <!--<div class="modal-footer">-->
 
-     <p>Posted by {{image.user.user}}</p>
+     <!--<p>Posted by {{image.user.user}}</p>-->
 
-        <h5 id=modal-text>{{image.description}}</h5>
+        <!--<h5 id=modal-text>{{image.description}}</h5>-->
 
-        <button type="button" class="btn btn-outline-secondary
-              my-2 my-sm-0" data-dismiss="modal">Close</button>
+        <!--<button type="button" class="btn btn-outline-secondary-->
+              <!--my-2 my-sm-0" data-dismiss="modal">Close</button>-->
 
-      </div>
-    </div>
-  </div>
-</div>
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
 
-<script>
+<!--<script>-->
 
-  function copyLink(value) {
-    console.log('sdfgsdfg')
-    function handler(event) {
-      event.clipboardData.setData('text/plain', value);
-      event.preventDefault();
-      document.removeEventListener('copy', handler, true);
-    }
+  <!--function copyLink(value) {-->
+    <!--console.log('sdfgsdfg')-->
+    <!--function handler(event) {-->
+      <!--event.clipboardData.setData('text/plain', value);-->
+      <!--event.preventDefault();-->
+      <!--document.removeEventListener('copy', handler, true);-->
+    <!--}-->
 
-    document.addEventListener('copy', handler, true);
-    document.execCommand('copy');
+    <!--document.addEventListener('copy', handler, true);-->
+    <!--document.execCommand('copy');-->
 
-  }
-</script> {% endblock %}
+
+  <!--}-->
+<!--</script>-->
+
+{% endblock %}
