--- a/instagramapp/templates/navbar.html
+++ b/instagramapp/templates/navbar.html
@@ -13,7 +13,10 @@
       {% if user.is_authenticated %}
 
       <li>
-        <a href="{%url 'homePage'%}">Profile</a>
+        <a href="{%url 'edit_profile'%}">Update Profile</a>
+      </li>
+      <li>
+        <a href="{%url 'myprofile'%}">My Profile</a>
       </li>
                    <li>
                     <a href="{%url 'new_image'%}">Upload</a>
