--- a/instagramapp/templates/comment.html
+++ b/instagramapp/templates/comment.html
@@ -1,12 +1,3 @@
-{% extends 'base.html' %}
-{% load bootstrap4 %}
-{% block content %}
-<div class="container mt-2 mx-auto p-5" style="background-color:#ffffff; border: 1px solid #e6e6e6;">
-  <hr>
-  <form  method="post">
-    {%csrf_token%} {% bootstrap_form form %}
-      <input type="submit" class="btn btn-primary" value="Post">
-  </form>
-  <hr>
-</div>
-{% endblock %}
+<!--{% extends 'base.html' %}-->
+<!--{% load bootstrap4 %}-->
+<!--{% block content %}-->
