Can view own profile page

--- a/instagramapp/templates/navbar.html
+++ b/instagramapp/templates/navbar.html
@@ -47,7 +47,7 @@
     <!-- Adding a search form  -->
     <div class="col-sm-4 col-md-4 navbar-right">
 
-      <form class="navbar-form" role="search" action="{% url 'search_image' %}">
+      <form class="navbar-form" role="search" action="{% url 'search_users' %}">
 
         <div class="input-group">
           <input type="text" class="form-control mr-sm-4" placeholder="Search User" name="user">
