--- a/instagramapp/templates/index.html
+++ b/instagramapp/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% load bootstrap4 %}{% block content %} {% load widgets tweak%}
+{% extends 'base.html' %} {% load static %} {% load bootstrap4 %}{% block content %}
 <link href="https://fonts.googleapis.com/css?family=Charmonman|Dancing+Script|Kodchasan|Spirax|Abril+Fatface" rel="stylesheet">
 
 <div class="container">
