--- a/instagramapp/templates/registration/base.html
+++ b/instagramapp/templates/registration/base.html
@@ -20,8 +20,8 @@
   {% include "navbar.html" %} {% block content %}
   <h1 class='text-center'> Images for Today </h1> {%endblock%} {% block scripts %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://ucarecdn.com/libs/widget/3.6.1/uploadcare.min.js" charset="utf-8"></script> {% bootstrap_javascript
-  %} {% endblock %}
+  <script src="https://ucarecdn.com/libs/widget/3.6.1/uploadcare.min.js" charset="utf-8"></script>
+  {% bootstrap_javascript %} {% endblock %}
 
 
 
