--- a/instagramapp/templates/search.html
+++ b/instagramapp/templates/search.html
@@ -14,7 +14,7 @@
   <h1><strong> These are the user profiles found </strong></h1>
 
   {% for profile in profiles %}
-  <p><a href="{% url 'individual_profile_page' user.id %}"> {{profile.user.username}}</a></p>
+  <p><a href="{% url 'individual_profile_page' profile.user.id %}"> {{profile.user.username}}</a></p>
   {% endfor %}
 
 
