--- a/instagramapp/templates/registration/user_image_list.html
+++ b/instagramapp/templates/registration/user_image_list.html
@@ -3,7 +3,14 @@
 {% load staticfiles %}
 {% block content %}
 
-<h1> Your Profile Page </h1>
+<div class="jumbotron text-center">
+    <h1> Your Profile Page </h1>
+     <img src="{{profile.profilepic.url}}" class="thumbnail" id="eachimage1"
+          size="20px20"></a>
+    <p>{{profile.bio}}</p>
+    </div>
+
+
 <div class="container">
 
   <div class="card-columns">
