--- a/instagramapp/templates/image.html
+++ b/instagramapp/templates/image.html
@@ -12,8 +12,6 @@
 </div>
 
 
-
-
 <div class="container">
 <div class="card mb-3" style="width:40rem;;">
   <img class="card-img-top" src="{{image.image.url}}" alt="Card image cap" class="img-fluid" size="100px200">
@@ -42,22 +40,21 @@
      <p>{{image.comments}}</p>
 
 
-       {% for comment in image.comment.all %}
+       {% for comment in comment %}
 
        <p> {{ review.comment }}</p>
 
        {% endfor%}
-       <!--who posted the review-->
-       <!--<p>Posted by : {{ image.user}}</p>-->
+
      </div>
    </div>
 </div>
 </div>
 
 
-<h3>Add your review</h3>
 
 <div class="container mt-2 mx-auto p-5" style="background-color:#ffffff; border: 1px solid #e6e6e6;">
+  <h3>Add your comment</h3>
   <hr>
   <form  method="post">
     {%csrf_token%} {% bootstrap_form form %}
@@ -66,77 +63,4 @@
   <hr>
 </div>
 
-
-<!--<div class="container">-->
-
-  <!--<div class="card-columns">-->
-
-
-    <!--<div class="card border-secondary"><a href="{% url 'image' image.id %}">-->
-        <!--<img src="{{image.image.url}}" data-target="#imageModal{{image.id}}" data-toggle="modal" alt="" class="img-fluid" id="eachimage"-->
-          <!--size="100px200"></a>-->
-    <!--</div>-->
-
-
-
-  <!--</div>-->
-
-
-<!--</div>-->
-
-
-
-<!--modal-->
-
-<!--<div class="modal fade" id="imageModal{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">-->
-  <!--<div class="modal-dialog" role="document">-->
-    <!--<div class="modal-content">-->
-      <!--<img src="{{image.image.url}}" data-toggle="modal" alt="" style="height:600px;width:500px;">-->
-      <!--<div class="modal-header">-->
-        <!--<h4 id="modal-text text-center">{{image.name}}</h4>-->
-        <!--<h4 style="font-family: 'Kodchasan', sans-serif;color:blue;" id="modal-text ">{{image.location}}</h4>-->
-        <!--{% for tag in image.tags.all %}-->
-
-        <!--<button class="btn btn-lg btn-success" style="font-family: 'Kodchasan', sans-serif;color:white;"> #{{ tag.name }}</button>-->
-
-        <!--{% endfor %}-->
-      <!--</div>-->
-
-      <!--<div class="modal-footer">-->
-
-        <!--<input class="form-control" type="text" value="https://gallerymelissa.herokuapp.com{{image.image.url}}">-->
-        <!--<button type="button" value="https://gallerymelissa.herokuapp.com{{image.image.url}}" onclick="copyLink(this.value)" class="btn btn-outline-secondary my-2 my-sm-0 link-btn">Copy-->
-          <!--Photo Link</button>-->
-
-      <!--</div>-->
-      <!--<div class="modal-footer">-->
-
-     <!--<p>Posted by {{image.user.user}}</p>-->
-
-        <!--<h5 id=modal-text>{{image.description}}</h5>-->
-
-        <!--<button type="button" class="btn btn-outline-secondary-->
-              <!--my-2 my-sm-0" data-dismiss="modal">Close</button>-->
-
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
-
-<!--<script>-->
-
-  <!--function copyLink(value) {-->
-    <!--console.log('sdfgsdfg')-->
-    <!--function handler(event) {-->
-      <!--event.clipboardData.setData('text/plain', value);-->
-      <!--event.preventDefault();-->
-      <!--document.removeEventListener('copy', handler, true);-->
-    <!--}-->
-
-    <!--document.addEventListener('copy', handler, true);-->
-    <!--document.execCommand('copy');-->
-
-
-  <!--}-->
-<!--</script>-->
 {% endblock %}
